feat(deploy): add deployment configuration for Render + Netlify
- Add multi-stage Dockerfile for backend (JRE 21 + ffmpeg)
- Add netlify.toml with SPA redirect rules
- Add .env.example files for both frontend and backend
- Make CORS origins configurable via environment variable
- Use VITE_API_BASE_URL env var in frontend API client
- Prevent local dev Supabase key from leaking in production builds

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>